<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Scheduler</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="blank"></string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="phone1">Phone Number:</string>
    <string name="phone2">Alternate Number:</string>
    <string name="level">Level:</string>
    <string name="min_pay">Min Pay:</string>
    <string name="empty_officials">No officials found.</string>
    <string name="confirm">Confirm</string>
    <string name="empty_leagues">No leagues found.</string>
    <string name="league_name">Name:</string>
    <string name="league_pay">Pay:</string>
</resources>